--- a/views/tree.tt
+++ b/views/tree.tt
@@ -34,5 +34,10 @@
                             }
                         }
                     },
+                    [% IF readonly %]
+                    "plugins" : ['conditionalselect'], "conditionalselect" : function (node) {
+                        return false;
+                    }
+                    [% END %]
                 });
             [% END %]
