Fix incorrect readonly on trees

--- a/views/tree.tt
+++ b/views/tree.tt
@@ -34,7 +34,7 @@
                             }
                         }
                     },
-                    [% IF readonly %]
+                    [% IF tree.readonly %]
                     "plugins" : ['conditionalselect'], "conditionalselect" : function (node) {
                         return false;
                     }
