Show approval name as HTML

--- a/views/approval.tt
+++ b/views/approval.tt
@@ -9,7 +9,7 @@
     [% FOREACH record IN records %]
         <tr>
             <td><a href="/approval/[% record.record_id %]">[% record.current_id %]</a></td>
-            <td>[% record.createdby %]</td>
+            <td>[% record.createdby.html %]</td>
         </tr>
     [% END %]
 </table>
