--- a/views/data_graph.tt
+++ b/views/data_graph.tt
@@ -16,6 +16,90 @@
     <script type="text/javascript">
         var jscode='[% FILTER remove('\n+') %]
             [% FILTER replace('\'', '\\\'') %]
+            function do_plot_json(plotData, options_in) {
+                plotData = JSON.parse(plotData);
+                options_in = JSON.parse(options_in);
+                do_plot(plotData, options_in);
+            };
+            function do_plot (plotData, options_in) {
+                var ticks = plotData.xlabels;
+                var seriesDefaults;
+                var plotOptions = {};
+                if (options_in.type == "bar") {
+                    plotOptions.seriesDefaults = {
+                        renderer:$.jqplot.BarRenderer,
+                        rendererOptions: {
+                            shadow: false
+                        },
+                        pointLabels: {
+                            show: false,
+                            hideZeros: true
+                        }
+                    };
+                } else if (options_in.type == "donut") {
+                    plotOptions.seriesDefaults = {
+                        renderer:$.jqplot.DonutRenderer,
+                        rendererOptions: {
+                            sliceMargin: 3,
+                            showDataLabels: true,
+                            dataLabels: 'value',
+                            shadow: false
+                        }
+                    };
+                } else if (options_in.type == "pie") {
+                    plotOptions.seriesDefaults = {
+                        renderer:$.jqplot.PieRenderer,
+                        rendererOptions: {
+                            showDataLabels: true,
+                            dataLabels: 'value',
+                            shadow: false
+                        }
+                    };
+                } else {
+                    plotOptions.seriesDefaults = {
+                        pointLabels: {
+                            show: false
+                        }
+                    };
+                }
+                if (options_in.type != "donut" && options_in.type != "pie") {
+                    plotOptions.series = plotData.labels;
+                    plotOptions.axes = {
+                        xaxis: {
+                            renderer: $.jqplot.CategoryAxisRenderer,
+                            ticks: ticks,
+                            label: options_in.x_axis_name,
+                            labelRenderer: $.jqplot.CanvasAxisLabelRenderer
+                        },
+                        yaxis: {
+                            padMin: 0,
+                            label: options_in.y_axis_label,
+                            labelRenderer: $.jqplot.CanvasAxisLabelRenderer
+                        }
+                    };
+                    plotOptions.axesDefaults = {
+                        min: 0,
+                        tickRenderer: $.jqplot.CanvasAxisTickRenderer ,
+                        tickOptions: {
+                          angle: -30,
+                          fontSize: '8pt'
+                        }
+
+                    };
+                }
+                plotOptions.stackSeries = options_in.stackseries;
+                plotOptions.legend = {
+                    renderer:$.jqplot.EnhancedLegendRenderer,
+                    show: options_in.showlegend,
+                    location: 'e',
+                    placement: 'outside'
+                };
+                plotOptions.seriesColors = [ "#34C3E0", "#62BB46", "#FFDD00", "#D1D3D4",
+                    "#F99D1C", "#F0679E", "#2C4269", "#7F3F98", "#1C75BC",
+                    "#EF4136", "#2BB673"
+                ];
+                $.jqplot('chartdiv' + options_in.id, plotData.points, plotOptions);
+            };
             $(document).ready(function(){
                 if (!FontDetect.isFontLoaded('14px/1 FontAwesome')) {
                     $( ".use-icon-font" ).hide();
@@ -31,92 +115,24 @@
                             ret = data;
                         }
                     });
-                   return ret;
+                    return ret;
                 };
                 $.jqplot.config.enablePlugins = true;
                 [% FOREACH graph IN graphs %]
-                [% NEXT UNLESS graph.selected %]
-                var time = (new Date).getTime();
-                var jsonurl = "/data_graph/[% graph.id %]/" + time;
-                var plotData = ajaxDataRenderer(jsonurl);
-                var ticks = plotData.xlabels;
-                $.jqplot('chartdiv[% graph.id %]', plotData.points, {
-                    stackSeries: [% IF graph.stackseries %]true[% ELSE %]false[% END %],
-                    legend: {
-                        renderer:$.jqplot.EnhancedLegendRenderer,
-                        show: [% graph.showlegend %],
-                        location: 'e',
-                        placement: 'outside'
-                    },
-                    seriesColors: [ "#34C3E0", "#62BB46", "#FFDD00", "#D1D3D4",
-                        "#F99D1C", "#F0679E", "#2C4269", "#7F3F98", "#1C75BC",
-                        "#EF4136", "#2BB673"
-                    ],
-                    [% IF graph.type == "bar" %]
-                        seriesDefaults:{
-                            renderer:$.jqplot.BarRenderer,
-                            rendererOptions: {
-                                shadow: false
-                            },
-                            pointLabels: {
-                                show: false,
-                                hideZeros: true
-                            }
-                        },
-                    [% ELSIF graph.type == "donut" %]
-                        seriesDefaults:{
-                            renderer:$.jqplot.DonutRenderer,
-                            rendererOptions: {
-                                sliceMargin: 3,
-                                showDataLabels: true,
-                                dataLabels: 'value',
-                                shadow: false
-                            }
-                        },
-                    [% ELSIF graph.type == "pie" %]
-                        seriesDefaults:{
-                            renderer:$.jqplot.PieRenderer,
-                            rendererOptions: {
-                                showDataLabels: true,
-                                dataLabels: 'value',
-                                shadow: false
-                            }
-                        },
-                    [% ELSE %]
-                        seriesDefaults:{
-                            pointLabels: {
-                                show: false
-                            }
-                        },
-                    [% END %]
-                        [% UNLESS graph.type == "donut" OR graph.type == "pie" %]
-                            series: plotData.labels,
-                            axes: {
-                                xaxis: {
-                                    renderer: $.jqplot.CategoryAxisRenderer,
-                                    ticks: ticks,
-                                    label: "[% graph.x_axis_name %]",
-                                    labelRenderer: $.jqplot.CanvasAxisLabelRenderer
-                                },
-                                yaxis: {
-                                    padMin: 0,
-                                    label: "[% graph.y_axis_label %]",
-                                    labelRenderer: $.jqplot.CanvasAxisLabelRenderer
-                                }
-                            },
-                            axesDefaults: {
-                                min: 0,
-                                tickRenderer: $.jqplot.CanvasAxisTickRenderer ,
-                                tickOptions: {
-                                  angle: -30,
-                                  fontSize: '8pt'
-                                }
-
-                            },
-                        [% END %]
-                    }
-                );
-[% END %]
+                    [% NEXT UNLESS graph.selected %]
+                    var time = (new Date).getTime();
+                    var jsonurl = "/data_graph/[% graph.id %]/" + time;
+                    var plotData = ajaxDataRenderer(jsonurl);
+                    var options_in = {
+                        type: "[% graph.type %]",
+                        x_axis_name: "[% graph.x_axis_name %]",
+                        y_axis_label: "[% graph.y_axis_label %]",
+                        stackseries: [% graph.stackseries %],
+                        showlegend: [% graph.showlegend %],
+                        id: [% graph.id %]
+                    };
+                    do_plot(plotData, options_in);
+                [% END %]
             });
             [% END %]
         [% END %]';
